@@ -130,110 +130,7 @@ Safepoint 作为 Java 最让 end-user 讨厌，但又最让 JVM 实现者爱恨�
 
 ##  JavaThread - State
 
-
-
-Safepoint 机制的实现依赖于 [JavaThread](/exec-engine/threads/java-thread/java-thread.md) 。
-
-
-
-[src/hotspot/share/runtime/javaThread.hpp](https://github.com/openjdk/jdk//blob/890adb6410dab4606a4f26a942aed02fb2f55387/src/hotspot/share/runtime/javaThread.hpp#L244)
-
-```c++
-class JavaThread: public Thread {
-...
-  // Safepoint support
- public:                                                        // Expose _thread_state for SafeFetchInt()
-  volatile JavaThreadState _thread_state;
- private:
-  SafepointMechanism::ThreadData _poll_data;
-  ThreadSafepointState*          _safepoint_state;              // Holds information about a thread during a safepoint
-  address                        _saved_exception_pc;           // Saved pc of instruction where last implicit exception happened
-
-```
-
-[src/hotspot/share/utilities/globalDefinitions.hpp](https://github.com/openjdk/jdk//blob/890adb6410dab4606a4f26a942aed02fb2f55387/src/hotspot/share/utilities/globalDefinitions.hpp#L1030)
-
-```c++
-// JavaThreadState keeps track of which part of the code a thread is executing in. This
-// information is needed by the safepoint code.
-//
-// There are 4 essential states:
-//
-//  _thread_new         : Just started, but not executed init. code yet (most likely still in OS init code)
-//  _thread_in_native   : In native code. This is a safepoint region, since all oops will be in jobject handles
-//  _thread_in_vm       : Executing in the vm
-//  _thread_in_Java     : Executing either interpreted or compiled Java code (or could be in a stub)
-//
-// Each state has an associated xxxx_trans state, which is an intermediate state used when a thread is in
-// a transition from one state to another. These extra states makes it possible for the safepoint code to
-// handle certain thread_states without having to suspend the thread - making the safepoint code faster.
-//
-// Given a state, the xxxx_trans state can always be found by adding 1.
-//
-enum JavaThreadState {
-  _thread_uninitialized     =  0, // should never happen (missing initialization)
-  _thread_new               =  2, // just starting up, i.e., in process of being initialized
-  _thread_new_trans         =  3, // corresponding transition state (not used, included for completeness)
-  _thread_in_native         =  4, // running in native code
-  _thread_in_native_trans   =  5, // corresponding transition state
-  _thread_in_vm             =  6, // running in VM
-  _thread_in_vm_trans       =  7, // corresponding transition state
-  _thread_in_Java           =  8, // running in Java or in stub code
-  _thread_in_Java_trans     =  9, // corresponding transition state (not used, included for completeness)
-  _thread_blocked           = 10, // blocked in vm
-  _thread_blocked_trans     = 11, // corresponding transition state
-  _thread_max_state         = 12  // maximum thread state+1 - used for statistics allocation
-};
-
-```
-
-其中 `class JavaThread` 的 `JavaThreadState _thread_state` 字段记录了线程的状态。
-
-
-
-![HotSpot JVM Deep Dive - Safepoint 9-43 screenshot](./safepoint.assets/java-thread-state-machine.png)
-
-*图: JavaThread 状态机。Source: [Java Thread state machine](https://youtu.be/JkbWPPNc4SI?si=c5YYAKHYBPROZAZ_&t=576)*
-
-
-
-> [来自: HotSpot JVM Deep Dive - Safepoint](https://www.youtube.com/watch?v=JkbWPPNc4SI&ab_channel=Java)
->
-> This is the state machine for the java thread and we can further classify it into the following categories:
->
-> - `mutable thread state` it's a state in which the thread can mute it the java heap or its thread local gc routes
-> - `immutable thread states` is a state where the threat can do none of these things
-> - `transition states` which act like bridges between the mutable and the immutable states a transition state has a **safe point check** or a **poll instruction** together with appropriate fencing
-
-
-
-这是 Java 线程的状态机，我们可以进一步将其分为以下类别：
-
-- `mutable thread state 可变线程状态` 线程可以修改 Java 堆或其线程本地 GC 数据
-- `immutable thread states 不可变线程状态` 不能修改 oop 的状态
-- `transition states 过渡状态` 充当`mutable thread state`和`immutable thread states` 之间的桥梁，过渡状态具有 **safe point check** 或 **轮询指令** 以及适当的隔离
-
-
-
-> [来自: HotSpot JVM Deep Dive - Safepoint](https://youtu.be/JkbWPPNc4SI?si=YIq5HIHvSQFcC4U9&t=597)
->
-> Let's for example take a look at this situation:
-> we have a new thread comes into being it starts running in the `VM state`.
-> Let's say this thread now wants to execute some java code. In order to do that it will need to traverse a transition into the `java state` and as that the transition as we said contains a `save point check`. Some notable transitions here is that the `java code(java state)` can transition to `VM state` and to `Native state` **without** performing save point checks instead the save point check is performed when the thread returns to `state java`.
->
-> 
->
-> Another important takeaway here is that code executing in `state native` is considered safe this means that during a safe point java threads can actually continue running native code and this also means that counter to the intuitive notion that a safe point involves blocking or halting all java threads it only means that they do not executein a sense a sensitive `mutable state`
-
-
-
-关于 `transition states` 的作用 ，让我们看一下这种情况：
-我们有一个新的线程出现，一开始在 `VM state` 中运行。
-假设这个线程现在要执行一些 Java 代码。为了做到这一点，它将需要间接跳转到  ` java state` ，这个跳转包含 safepoint check。 值得注意的是，Java 代码（`Java state`） 可以直接跳转到 `VM state` 和  `native state` ，**无需** 执行 safepoint check，但在线程返回到 `Java state` 时执行，需要 safepoint check 。
-
-
-
-另一个要注意的是，在`native state`下执行的代码被认为是安全的，这意味着在安全点期间，java 线程实际上可以继续运行 native code ，这也意味着，与安全点会阻塞或停止所有 java 线程的直观想法相反，安全点只意味着不执行敏感的 `mutable state` 操作。
+详见本书的 [JavaThread Polling 与 Reach Safepoint - JavaThread - State](/exec-engine/safepoint/javathread-polling-reach-sp.md#javathread_state) 一节。
 
 
 
@@ -334,6 +231,30 @@ class JavaFrameAnchor {
 
 ## Safepoint 协作流程详述
 
+Safepoint 协作流程可以划分为以下几步：
+
+1.  应用线程 Polling Safepoint
+
+2. 监听 Safepoint Request
+
+3. 接收 Safepoint Request
+
+4. Arm Safepoint - 标记所有线程
+
+5. 等待应用线程到达 Safepoint
+
+6.  应用线程陷入 Safepoint
+
+7. Global safepoint - The World Stopped
+
+8. Safepoint operation 结束
+
+
+
+### 应用线程 Polling Safepoint
+
+详见本书的 [JavaThread Polling 与 Reach Safepoint - Polling](/exec-engine/safepoint/javathread-polling-reach-sp.md#polling) 一节。
+
 
 
 ### 监听 Safepoint Request
@@ -373,89 +294,15 @@ void VMThread::inner_execute(VM_Operation* op) {
 
 
 
+(arming_safepoint)=
 
-
-### Arm Safepoint - 标记所有线程， Global Safepoint 开始
+### Arm Safepoint - 标记所有线程
 
 `VM Thread` 线程在收到 safepoint request 后，修改一个 JVM 全局的 `safepoint flag `为 true（这个 flag 可以是操作系统的内存页权限标识） 。
 
 
 
-先看看相关的数据结构：
-
-[src/hotspot/share/runtime/javaThread.hpp](https://github.com/openjdk/jdk//blob/890adb6410dab4606a4f26a942aed02fb2f55387/src/hotspot/share/runtime/javaThread.hpp#L246)
-
-```c++
-class JavaThread: public Thread {
-    ...
- private:
-  SafepointMechanism::ThreadData _poll_data;
-  ThreadSafepointState*          _safepoint_state;              // Holds information about a thread during a safepoint
-  address                        _saved_exception_pc;           // Saved pc of instruction where last implicit exception happened
-```
-
-
-
-[src/hotspot/share/runtime/safepointMechanism.hpp](https://github.com/openjdk/jdk//blob/890adb6410dab4606a4f26a942aed02fb2f55387/src/hotspot/share/runtime/safepointMechanism.hpp#L68)
-
-```c++
-class SafepointMechanism {
-  static uintptr_t _poll_page_armed_value;
-  static uintptr_t _poll_page_disarmed_value;
-
-  static uintptr_t _poll_word_armed_value;
-  static uintptr_t _poll_word_disarmed_value;
-
-  static address _polling_page;
-...    
-  struct ThreadData {
-    volatile uintptr_t _polling_word;
-    volatile uintptr_t _polling_page;
-    ...
-  };
-```
-
-
-
-JVM 在启动时，就已经初始化了两个 Memory Page ，用于 safepoint 。一个 bad_page 不可读，如在它上执行 `test` x86指令，线程会因收到信号而挂起并跳转到信号处理器代码 。一个 good_page 可读，可正常执行 `test` x86指令：
-
-[src/hotspot/share/runtime/safepointMechanism.cpp](https://github.com/openjdk/jdk//blob/890adb6410dab4606a4f26a942aed02fb2f55387/src/hotspot/share/runtime/safepointMechanism.cpp#L74)
-
-```c++
-uintptr_t SafepointMechanism::_poll_word_armed_value;
-uintptr_t SafepointMechanism::_poll_page_armed_value;
-
-//   const static intptr_t _poll_bit = 1;
-
-void SafepointMechanism::default_initialize() {
-  // Poll bit values
-  _poll_word_armed_value    = poll_bit();
-  _poll_word_disarmed_value = ~_poll_word_armed_value;
-
-...
-    // Polling page
-    const size_t page_size = os::vm_page_size();
-    const size_t allocation_size = 2 * page_size;
-    char* polling_page = os::reserve_memory(allocation_size);
-    os::commit_memory_or_exit(polling_page, allocation_size, false, "Unable to commit Safepoint polling page");
-    MemTracker::record_virtual_memory_type((address)polling_page, mtSafepoint);
-
-    char* bad_page  = polling_page;
-    char* good_page = polling_page + page_size;
-
-    os::protect_memory(bad_page,  page_size, os::MEM_PROT_NONE);
-    os::protect_memory(good_page, page_size, os::MEM_PROT_READ);
-
-    log_info(os)("SafePoint Polling address, bad (protected) page:" INTPTR_FORMAT ", good (unprotected) page:" INTPTR_FORMAT, p2i(bad_page), p2i(good_page));
-
-    // Poll address values
-    _poll_page_armed_value    = reinterpret_cast<uintptr_t>(bad_page);
-    _poll_page_disarmed_value = reinterpret_cast<uintptr_t>(good_page);
-    _polling_page = (address)bad_page;
-}
-```
-
-
+Arm Safepoint 术语中这个 arm 可以直译成 “武装/装备” ，但我翻译成`设置标志` 。
 
 
 
@@ -514,7 +361,11 @@ void SafepointSynchronize::arm_safepoint() {
   }    
 ```
 
-可见，`vm thread` 逐一 `arm` 所有的应用线程 。这个 arm 可以直译成 “武装/装备” ，但我翻译成`设置标志`。
+可见，`vm thread` 逐一 `arm` 所有的应用线程 。
+
+
+
+自从 OpenJDK11 的 [JEP 312: Thread-Local Handshakes - 2017年](https://openjdk.org/jeps/312) 后，就有了非 JVM Global 的 Safepoint - Thread Safepoint 。而 JVM Global 的 Safepoint 好像也修改为基于 `Thread-Local Handshakes` 去实现，即对每一条 JavaThread 执行 `Thread-Local Handshakes`。
 
 
 
@@ -577,73 +428,15 @@ int SafepointSynchronize::synchronize_threads(jlong safepoint_limit_time, int no
 
 
 
-### Polling Safepoint and Reach Safepoint - 应用线程 polling 并陷入 Safepoint
+### 应用线程陷入 Safepoint
 
-其它应用线程（App thread）其实会高频检查这个 safepoint flag(safepoint check/polling) ，当发现为 true（arm) 时，就到达（进入） safepoint 状态。
-
-
+Java 线程会高频检查 safepoint flag(safepoint check/polling) ，当发现为 true（arm) 时，就到达（进入） safepoint 状态。
 
 
 
-- 对于 绿色 `immutable thread state` 状态的 JavaThread:  
-
-  `vm thread`  通过 `arm` Java 线程的 polling page，这实际上在 arm safepoint 期间阻止了线程从所有绿色 `immutable thread state` 中唤醒/返回后，转换到任何红色 unsafe `mutable thread state` 。见 [src/hotspot/share/utilities/globalDefinitions.hpp](https://github.com/openjdk/jdk//blob/890adb6410dab4606a4f26a942aed02fb2f55387/src/hotspot/share/utilities/globalDefinitions.hpp#L1030)：
-
-  ```c++
-  // Each state has an associated xxxx_trans state, which is an intermediate state used when a thread is in
-  // a transition from one state to another. These extra states makes it possible for the safepoint code to
-  // handle certain thread_states without having to suspend the thread - making the safepoint code faster.
-  ```
-
-  
-
-![HotSpot JVM Deep Dive - Safepoint 19-43 screenshot](./safepoint.assets/disable-to-mutable-thread-state-by-sp-check.png)
-
-*图: 当 JavaThread  被`arm`  polling page 后的状态机变化 。Source: [HotSpot JVM Deep Dive - Safepoint](https://youtu.be/JkbWPPNc4SI?si=c5YYAKHYBPROZAZ_&t=576)*
+详见本书的 [JavaThread Polling 与 Reach Safepoint - Reach and handle](/exec-engine/safepoint/javathread-polling-reach-sp.md#reach) 一节。
 
 
-
-- 对于 红色 `mutable thread state` 状态的 JavaThread: 
-
-  `vm thread`  通过 `arm` Java 线程的 polling page， 触发 Java 线程从 `mutable thread state` 转换为 `immutable thread state` 状态。并且作为此转换的结果，线程本地 GC 树被同步到 JavaThread 对象。
-
-  对于 `VM state` 的线程，这意味着需要等待线程自行完成转换。`VM state` 中只有少数几个地方显式执行安全点检查。例如，在争夺 `VM mutex 互斥锁`或 `VM monitor` 时。此设计的前提是 Java 线程应尽可能少地处于 `VM state`。但对于在 `state java`  下运行的线程，情况有所不同。
-
-  
-
-
-
-下图举一个例子，尝试说明在几种状态和操作系统调度环境下，线程到达 Safepoint (GetStackTrace 需要 Stop The World) 的情况。
-
-
-
-![SafepointOverheads.png](./safepoint.assets/SafepointOverheads.png)
-
-*图:  几种状态和系统调度环境下，线程到达 Safepoint 的情况. Source: [Safepoints: Meaning, Side Effects and Overheads - psy-lob-saw.blogspot.com](https://psy-lob-saw.blogspot.com/2015/12/safepoints.html)*
-
-
-
-- 绿色箭头：java state thread and running CPU
-- 黄色箭头：java state thread and off CPU (因 CPU 资源不足等原因)
-- 红色箭头：JNI state thread
-
-
-
-从 VMThread arm safepoint 到 应用线程 Reach Safepoint 的延迟，叫 `Time To Safe Point(TTSP)` ：
-
-每个线程在遇到安全点轮询时都会进入安全点。但到达安全点轮询需要执行未知数量的指令。上图中，我们可以看到：
-
-- J1 直接命中安全点轮询并被暂停。J2 和 J3 正在争夺可用的 CPU 时间。J3 抢占了一些 CPU 时间，将 J2 推入运行队列，但 J2 并未进入安全点。J3 到达安全点并暂停，从而腾出内核，让 J2 取得足够的进展，进入安全点轮询。
-
-- J4 和 J5 在执行 JNI 代码(`JNI state`)时属于`Immutable thread state`，它们不受 Safepoint 挂起影响。请注意，J5 在 Stop The World 执行到一半时试图离开 JNI，并在恢复执行 Java 代码前被暂停。重要的是，我们观察到不同线程到达安全点的时间各不相同，有些线程暂停的时间比其他线程长，Java 线程花很长时间到达安全点可能会耽误其他线程。
-
-
-
-`-XX:+PrintGCApplicationStoppedTime` 可以打印出 TTSP 。
-
-
-
-关于 "Polling Safepoint and Reach Safepoint - 应用线程 polling 并陷入 Safepoint" 的内容，更多细节见本书的 [JIT 编译后的 Polling 与 Reach Safepoint](jit-polling-reach-sp.md) 一节。
 
 
 
@@ -675,10 +468,6 @@ int SafepointSynchronize::synchronize_threads(jlong safepoint_limit_time, int no
 
 
 
-
-
-
-
 ## 参考
 
 - [HotSpot JVM Deep Dive - Safepoint - Youtube Java Channel](https://www.youtube.com/watch?v=JkbWPPNc4SI&ab_channel=Java)
@@ -686,8 +475,13 @@ int SafepointSynchronize::synchronize_threads(jlong safepoint_limit_time, int no
 - [Safepoints: Meaning, Side Effects and Overheads - psy-lob-saw.blogspot.com](https://psy-lob-saw.blogspot.com/2015/12/safepoints.html)
 - [Where is my safepoint? - psy-lob-saw.blogspot.com](https://psy-lob-saw.blogspot.com/2014/03/where-is-my-safepoint.html)
 - [The Inner Workings of Safepoints 2023 - mostlynerdless.de](https://mostlynerdless.de/blog/2023/07/31/the-inner-workings-of-safepoints/)
+- [Robbin Ehn: Handshaking HotSpot - Youtube Java Channel - 2020](https://www.youtube.com/watch?v=VBCOfAJ409s&ab_channel=Java)
+
+
+
+
 
 
 ```{toctree}
-jit-polling-reach-sp.md
+javathread-polling-reach-sp.md
 ```
